--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development concurrently \"webpack-dev-server --open --hot\" \"nodemon server/server.js\"", 
+    "dev": "NODE_ENV=development concurrently \"webpack-dev-server --open --hot\" \"nodemon server/server.js\"",
     "backupDev": "NODE_ENV=development webpack-dev-server --open --hot"
   },
   "author": "Shanon Lee",
   "license": "MIT",
   "dependencies": {
+    "pg": "^8.7.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -21,8 +24,10 @@
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "concurrently": "^6.4.0",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
