--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "Shanon Lee",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.2",
+    "bootstrap": "^5.1.3",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
