--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node server/server.js",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development concurrently \"webpack-dev-server --open --hot\" \"nodemon server/server.js\"",
-    "backupDev": "NODE_ENV=development webpack-dev-server --open --hot"
+    "backupDev": "NODE_ENV=development webpack-dev-server --open --hot",
+    "test": "jest"
   },
   "author": "Shanon Lee",
   "license": "MIT",
@@ -29,8 +30,10 @@
     "concurrently": "^6.4.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "style-loader": "^3.3.1",
+    "supertest": "^6.2.2",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
